--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiri&display=swap');
+
+:root {
+  --basic-color: #23cc71;
+}
+
 .App {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+}
+
+.container h1 {
+  font-size: 60px;
   text-align: center;
+  color: var(--basic-color);
+}
+
+.repo-container {
+  width: 700px;
+  height: 500px;
+  margin: 50px;
+  padding: 30px 40px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
