--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   align-items: center;
   flex-direction: column;
   font-family: 'Amiri', serif;
+  overflow: hidden;
 }
 
 .container {
@@ -25,11 +26,17 @@
 }
 
 .repo-container {
-  width: 700px;
-  height: 500px;
+  width: 50%;
+  height: 700px;
   margin: 50px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   overflow: scroll;
+}
+
+@media screen and (max-width: 600px) {
+  .repo-container {
+    width: 100%;
+  }
 }
 
 .repo-text {
