--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiri&display=swap');
+
+:root {
+  --basic-color: #23cc71;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Amiri', serif;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.container h1 {
+  font-size: 60px;
+  text-align: center;
+  color: var(--basic-color);
+}
+
+.repo-container {
+  width: 50%;
+  height: 700px;
+  margin: 50px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  overflow: scroll;
+}
+
+@media screen and (max-width: 600px) {
+  .repo-container {
+    width: 100%;
+    margin: 0;
+    box-shadow: none;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+.repo-text {
+  font-weight: 600;
+}
+
+.repo-description {
+  font-weight: 600;
+  font-style: bold;
+  color: var(--basic-color);
+}
+
+.list-head {
+  text-align: center;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.footer {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.list {
+  list-style: circle;
 }
