--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
   margin: 50px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   overflow: scroll;
+  line-height: 30px;
 }
 
 @media screen and (max-width: 600px) {
